<?xml version="1.0" encoding="utf-8"?>

<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="match_parent"
    android:padding="16dp">

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/newItemInput"
        android:autofillHints=""
        android:inputType="text"
        android:minHeight="48dp"
        android:padding="12dp"
        android:hint="@string/nuevo_elemento" />

    <Button
        android:id="@+id/deleteButton"
        android:layout_width="377dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:text="@string/eliminar" />

    <Button
        android:id="@+id/addButton"
        android:layout_width="377dp"
        android:layout_height="wrap_content"
        android:text="@string/agregar" />

    <ListView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:choiceMode="multipleChoice"
        android:id="@+id/listView_data"/>

</LinearLayout>