<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".createNote">


    <androidx.appcompat.widget.Toolbar
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:id="@+id/toolbarofcreatenote"
        android:background="@color/white">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:autofillHints=""
            android:hint="@string/noteTitle"
            android:inputType="text"
            android:paddingTop="12dp"
            android:textSize="20sp"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:id="@+id/createtitleofnote"/>

    </androidx.appcompat.widget.Toolbar>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:autofillHints=""
        android:inputType="text"
        android:textSize="15sp"
        android:hint="@string/noteContent"
        android:background="@color/white"
        android:gravity="top|left"
        android:textColor="@color/black"
        android:layout_below="@+id/toolbarofcreatenote"
        android:padding="15dp"
        android:id="@+id/createcontentofnote"
        tools:ignore="RtlHardcoded">

    </EditText>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/savenote"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="30dp"
        android:layout_marginBottom="30dp"
        android:background="#A1F4FB"
        android:contentDescription="@string/savenote"
        android:src="@drawable/save"
        app:maxImageSize="56dp">

    </com.google.android.material.floatingactionbutton.FloatingActionButton>

    <ProgressBar
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:visibility="invisible"
        android:id="@+id/progressbarofcreatenote"
        android:layout_marginTop="10dp">

    </ProgressBar>

</RelativeLayout>